style: 💄 Fix z-index issue and update font-family for Sweet2

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -22,3 +22,14 @@ code:not([class*='language-']):after {
 code[class*='language-'] {
   padding: 0;
 }
+
+.swal2-container {
+  z-index: 20000 !important;
+}
+
+.swal2-confirm,
+.swal2-styled,
+.swal2-default-outline {
+  font-family: 'Prompt', 'Sarabun', 'Noto Sans Thai', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
+}
